[package]
name = "lending-pool"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.27.4"

[dependencies.liquidity-pool]
path = "../liquidity_pool"

[dependencies.price-aggregator-proxy]
path = "../common/price-aggregator-proxy"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.4"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-checks]
path = "../common/checks"
