[package]
name = "lending-pool"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.34.1"

[dependencies.liquidity-pool]
path = "../liquidity_pool"

[dependencies.price-aggregator-proxy]
path = "../common/price-aggregator-proxy"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-checks]
path = "../common/checks"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.1"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.aggregator-mock]
path = "../aggregator_mock"
