[package]
name = "lending-pool"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
version = "0.41.0"

[dependencies.liquidity-pool]
path = "../liquidity_pool"

[dependencies.price-aggregator-proxy]
path = "../common/price-aggregator-proxy"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-checks]
path = "../common/checks"

[dependencies.common-tokens]
path = "../common/tokens"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.41.0"

[dev-dependencies.aggregator-mock]
path = "../aggregator_mock"
