[package]
name = "liquidity-pool"
version = "0.0.1"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.34.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.1"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-checks]
path = "../common/checks"

[dependencies.common-tokens]
path = "../common/tokens"

[dependencies.price-aggregator-proxy]
path = "../common/price-aggregator-proxy"
