[package]
name = "router"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.18"

[dependencies.elrond-wasm-derive]
version = "0.18"

[dependencies.elrond-wasm-node]
version = "0.18"
optional = true

[dependencies.liquidity_pool]
path = "../liquidity_pool"

[dev-dependencies.elrond-wasm-debug]
version = "0.18"

[dependencies.elrond-wasm-output]
version = "0.18"
features = ["wasm-output-mode", "panic-message"]
