[package]
name = "safety_module"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.20.0"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.20.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.20.0"

[dependencies.elrond-wasm-output]
version = "0.20.0"
features = ["wasm-output-mode", "panic-message"]

[dependencies.common_structs]
path = "../common/structs"
