[package]
name = "token_send"
version = "0.0.0"
authors = [ "",]
edition = "2018"

[lib]
path = "src/token_send.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.20.0"

[dependencies.elrond-wasm-derive]
version = "0.20.0"

[dependencies.elrond-wasm-node]
version = "0.20.0"
optional = true
