[package]
name = "liquidity-pool-wasm"
version = "0.0.1"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.liquidity-pool]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.27.4"

[dependencies.elrond-wasm-output]
version = "0.27.4"
features = ["wasm-output-mode"]
