[package]
name = "liquidity-pool-wasm"
version = "0.0.1"
authors = ["you"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.liquidity-pool]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.0"
